--- a/src/pages/ayuda/ayuda.html
+++ b/src/pages/ayuda/ayuda.html
@@ -6,13 +6,55 @@
 </ion-header>
 
 
-<ion-content padding id="app">
-    <ion-row center>
-      <ion-col text-center>
-        <img src="/assets/imgs/development.png" class="logo" />
-      </ion-col>
-    </ion-row>
-    <h1 text-center> En Desarrollo </h1>
-    <br/>
-    <h3 text-center>Pronto estara a disposición de Ud. Gracias</h3>
+<ion-content padding id="app">    
+    <h1 text-center> PlantAPP </h1>
+  <h2>1.	 ¿Qué es?</h2>
+  <p>PlantAPP es una aplicación móvil que sirve como herramienta para la identificación de plantas basadas en imágenes o fotografías de sus hojas.</p>
+  <br/>
+  <h2>2.	 ¿Para qué sirve?</h2>
+  <p>Identificar las plantas que se ven en la naturaleza gracias a la base de datos de PlantAPP.</p>
+
+  <p>Registrar plantas que no se encuentren en la base de datos o que nunca antes hayan sido identificadas.</p>
+
+  <p>Capturar imágenes y fotografías de todas las plantas posibles y guardarlas en la base de datos de PlantAPP.</p>
+  <br/>
+  <h2>3.	 ¿Cómo se usa?</h2>
+  Regístrese y ponga su nombre de usuario en <img src="assets/imgs/usuario.png" style="height: 32px;"/>   y active su GPS <img src="assets/imgs/localizacion.png"  style="height: 32px;"/>  , es recomendable para el mejor uso de PlantAPP.
+  <br/>
+  <h2>Usted puede realizar varias acciones en PlantAPP:</h2>
+  <h2>Planta Observada</h2>
+  <p>Elegir una fuente de imagen a utilizar (Cámara o Galería de fotos), tome una o varias imágenes de una planta que desea identificar (la mejor imagen será utilizada).</p>
+
+  <p>Para añadir una imagen, toque el <img src="assets/imgs/configuracion.png"  style="height: 32px;"/>  botón.</p>
+
+  <p>La identificación se hace más fácil si la imagen es más nítida y hay varias imágenes en consulta.</p>
+
+  <p>Trate de aislar bien la hoja mientras tome la fotografía. La calidad de los resultados se verá posteriormente, se recomienda usar la hoja plana en un fondo uniforme.</p>
+
+  <p>Ver sus imágenes, seleccionar y eliminar la imagen o actualizar su información.</p>
+  <br/>
+  <h2>Navegar por los resultados de su búsqueda</h2>
+  <p>La identificación se realiza de forma predeterminada, automáticamente tan pronto como se realice una modificación de una observación (con adición de algún filtro de una imagen)</p>
+  <p>Se muestran las imágenes de la planta junto a su información y características taxonómicas, además de su ubicación geográfica.</p>
+
+  <br/>
+  <h2>Si la planta no se puede identificar.</h2>
+<p>Si no se encuentra correspondencia de especies se puede registrar dicha planta y si no conoce el nombre puede guardar la imagen con un apelativo referencial hasta poder identificarla y así registrarla adecuadamente.</p>
+  <br/>
+<h2>Contribuir observación</h2>
+<p>Después de haber realizado la identificación y/o registro de su observación, PantAPP guarda en la base de datos y comparte con la red de usuarios dicha información.</p>
+
+<p>Para contribuir necesita iniciar sesión con la apertura de una cuenta. Puede crear una cuenta tocando en el <img src="assets/imgs/usuario.png"  style="height: 32px;"/>   botón.</p>
+<br/>
+<h2>Mis Registros</h2>
+<p>Todas la observaciones identificadas, registradas y validadas se muestran en la pantalla principal en orden de fecha y con la ubicación del lugar en el qe se realizò dicha observación.</p>
+
+<h1 text-center>PlantAPP</h1>
+<p>Al contribuir con PlantAPP, usted aporta información nueva a una comunidad de usuarios estudiantes, docentes e investigadores en ciencias botánicas.</p>
+<ion-row center>
+    <ion-col text-center>
+      <img src="assets/imgs/intro.jpg"/>
+    </ion-col>
+  </ion-row>
+    
   </ion-content>
