--- a/src/pages/creditos/creditos.html
+++ b/src/pages/creditos/creditos.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar color="secondary">
     <button ion-button menuToggle icon-only><ion-icon name='menu'></ion-icon></button>
-    <ion-title>About App</ion-title>
+    <ion-title>Créditos</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -13,10 +13,20 @@
   </ion-row>
   <h1 text-center> PlantAPP </h1>
   <br/>
-  <p text-left>Es una aplicación para la recopilación, anotación y recuperación de imágenes para ayudar en la identificación de plantas.
-    
-    Se incluye un sistema de apoyo para la identificación automática de las plantas a partir de imágenes en comparación con
-    las imágenes de una base de datos botánica. Los resultados se utilizan para obtener el nombre botánico de una planta,
-    si esta es suficientemente ilustrada en la base.
+
+  <h2> Contacto </h2>
+  <p> <a href="mailto:Jonying55@hotmail.com">Jonying55@hotmail.com</a></p>
+  <p> <a href="mailto:piteromeosc@gmail.com">piteromeosc@gmail.com</a></p>
+  <br/>
+
+  <h2> Follow </h2>  
+  <p> <a href="https://www.facebook.com/JonathanJL22" target="_blank">Facebook</a></p>
+  <br/>  
+  <h2> Créditos </h2>
+
+  <p text-left>El presente proyecto fue elaborado con el fin de brindar información botánica
+     y taxonómica a investigadores, estudiantes y docentes de la región de Ayacucho y en especial 
+     de la Universidad Nacional de San Cristóbal de Huamanga, a fin de mejorar las capacidades 
+     tecnológicas e investigativas.
   </p>
 </ion-content>
