--- a/src/pages/camara/camara.html
+++ b/src/pages/camara/camara.html
@@ -8,7 +8,7 @@
 <ion-content padding>
   <ion-row center>
     <ion-col text-center>
-      <img [src]="model.srcImagen" *ngIf="model.srcImagen"  style="height: 250px;"/>
+      <img [src]="model.srcImagen" *ngIf="model.srcImagen"/>
     </ion-col>
   </ion-row>
   <ion-item>
