--- a/src/pages/location/location.html
+++ b/src/pages/location/location.html
@@ -2,7 +2,7 @@
     <ion-navbar color="secondary">
         <ion-title>Ubicacion</ion-title>
         <ion-buttons end>
-        <button ion-button (click)="closeModal()">Close</button>
+        <button ion-button (click)="closeModal()">Cerrar</button>
         </ion-buttons>
     </ion-navbar>     
   </ion-header> 
