--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -2,7 +2,7 @@
     <ion-navbar color="secondary">
       <ion-title>LogIn</ion-title>
       <ion-buttons end>
-      <button ion-button (click)="closeModal()">Close</button>
+      <button ion-button (click)="closeModal()">Cerrar</button>
       </ion-buttons>
   </ion-navbar>  
   </ion-header>  
@@ -14,11 +14,11 @@
             </ion-col>
           </ion-row>
         <ion-item>
-          <ion-label fixed>Username</ion-label>
+          <ion-label fixed>Usuario</ion-label>
           <ion-input type="text" value="" [(ngModel)]="model.userName" ></ion-input>
         </ion-item>      
         <ion-item>
-          <ion-label fixed>Password</ion-label>
+          <ion-label fixed>Contraseña</ion-label>
           <ion-input type="password" [(ngModel)]="model.password"></ion-input>
         </ion-item>      
         <button ion-button block color="secondary" (click)="login()">Login</button>      
