--- a/src/pages/perfil/perfil.html
+++ b/src/pages/perfil/perfil.html
@@ -21,12 +21,12 @@
     </ion-row>
     <h1 text-center>{{model.Nombres}} </h1>
     <ion-item>
-      <ion-label fixed>Email</ion-label>
+      <ion-label fixed>Correo</ion-label>
       <ion-input type="text" [(ngModel)]="model.email"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label fixed>Username</ion-label>
+      <ion-label fixed>Usuario</ion-label>
       <ion-input type="text" [(ngModel)]="model.userName"></ion-input>
     </ion-item>
 
