--- a/src/pages/tutorial/tutorial.html
+++ b/src/pages/tutorial/tutorial.html
@@ -9,7 +9,7 @@
 <ion-content padding id="app">
     <ion-row center>
       <ion-col text-center>
-        <img src="/assets/imgs/development.png" class="logo" />
+        <img src="assets/imgs/development.png" class="logo" />
       </ion-col>
     </ion-row>
     <h1 text-center> En Desarrollo </h1>
