--- a/src/pages/usuario/usuario.html
+++ b/src/pages/usuario/usuario.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-navbar color="secondary">  
-      <ion-title> SingUp</ion-title>
+      <ion-title> Registro Usuario</ion-title>
       <ion-buttons end>
         <button ion-button (click)="closeModal()">Cerrar</button>
       </ion-buttons>
@@ -11,7 +11,7 @@
     <ion-row center>  
         <ion-col col-10 text-right>   
             <ion-avatar item-start>
-                <img [src]="model.srcImage" *ngIf="model.srcImage" style="height: 250px;"/>
+                <img [src]="model.srcImage" *ngIf="model.srcImage"/>
               </ion-avatar>            
         </ion-col>
         <ion-col col-2 text-right>   
@@ -21,24 +21,24 @@
         </ion-col> 
        </ion-row>    
     <ion-item>
-      <ion-label >Name</ion-label>
+      <ion-label >Nombres</ion-label>
       <ion-input type="text" [(ngModel)]="model.nombres"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label >Email</ion-label>
+      <ion-label >Correo</ion-label>
       <ion-input type="text" [(ngModel)]="model.email"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label >Username</ion-label>
+      <ion-label >Usuario</ion-label>
       <ion-input type="text" [(ngModel)]="model.userName"></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-label >Password</ion-label>
+      <ion-label >Contraseña</ion-label>
       <ion-input type="password" [(ngModel)]="model.password"></ion-input>
     </ion-item>
-    <button ion-button block color="secondary" (click)="signup()">Registrar</button>
+    <button ion-button block color="secondary" (click)="signup()">Registrar Me</button>
   </ion-list>
 </ion-content>
