--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar color="secondary">
-    <ion-title> LogIn/ Register</ion-title>
+    <ion-title> Bienvenido</ion-title>
     <ion-buttons end>
       <button ion-button (click)="closeModal()">Cerrar</button>
     </ion-buttons>
@@ -15,6 +15,6 @@
   <h1 text-center> Bienvenido a PlantApp </h1>
   <br/>
   <h3 text-center>Descubre todo lo interesante acerca de las plantas</h3>
-  <button ion-button block class="marginTop" (click)="signup()">Signup</button>
-  <button ion-button block color="secondary" (click)="login()">Login</button>
+  <button ion-button block class="marginTop" (click)="signup()">Registrarme</button>
+  <button ion-button block color="secondary" (click)="login()">Ingresar</button>
 </ion-content>
