--- a/src/pages/detalle-planta/detalle-planta.html
+++ b/src/pages/detalle-planta/detalle-planta.html
@@ -11,7 +11,7 @@
     <ion-grid>
       <ion-row>
         <ion-col col-12>
-          <img src="{{planta.imagen}}" style="height: 250px;" />
+          <img src="{{planta.imagen}}" />
         </ion-col>
       </ion-row>
     </ion-grid>
